---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 13/01/19
  Bugfixes:
    - Fixed Tin Stem consuption.
  Features:

---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 11/01/19
  Bugfixes:
    - Fixed Deadlock in Carbon Aerogel when playing with pyHT.
    - Fixed engine technology and reorganized some.
    - Fixed small research on iron.
    - Crusher tech now relays on Al chain.
    - Pressured air now unlocks on Coal Processing 1
  Features:
    - Changed fluid to extract tin to steam.
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 07/01/19
  Bugfixes:
    - Fixed Deadlock in Carbon Aerogel when playing with pyHT.
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 06/01/19
  Features:
    - Balanced Chromium, Iron, Copper, Quartz, Titanium, Nickel and Tin chain.
    - Reduced Nitrogen Consuption in some recipes.
    - Made titanium more relevant.
---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: 04/01/19
  Features:
    - Balanced Aluminium chain
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 02/01/19
  Bugfixes:
    - Fixed Deadlock in the centrifuge.
    - Fixed Sintered Silver unlockable.
  Features:
    - Added collagen to glycerol recipe for pyHT
    - Reduced the amount of lead to make ammo.
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 31/12/18
  Features:
    - Rebalanced the whole zinc chain
    - Rebalanced the whole nexelit chain
    - Small adjustments into coal chain
    - Some little balances in the sand and biofilm requierements